# mongodb-rest-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: .main.rs.swo  auth.rs  db.rs  error.rs  handlers.rs  https.rs  main.rs  metrics.rs  queries.rs  scopes.rs  server.rs  state.rs
src/aggregate/: handlers.rs  structs.rs
src/database/: .handlers.rs.swo  handlers.rs
src/delete/: handlers.rs  structs.rs
src/find/: handlers.rs  structs.rs
src/index/: handlers.rs  structs.rs
src/insert/: handlers.rs  structs.rs
src/roles/: handlers.rs
src/update/: handlers.rs  structs.rs
src/watch/: handlers.rs  structs.rs
