[package]
name = "json-bucket"
version = "0.1.12"
authors = ["Verticaleap"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
serde_json = "1.0"
hyper-tls = "0.4"
serde = { version = "1.0", features = ["derive"] }
#clap = "3.0.0-beta.1"
clap = "2"
env_logger = "0.8"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.8"
url = "2.0"
http = "0.2"
bytes = "0.5"
mongodb = "1.1.0"
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
bson = "1.1"
json = "0.12"
rust_tools = { git = "https://github.com/findelabs/rust-tools.git", branch = "master" }
