[package]
name = "mongodb-rest-rs"
version = "0.2.15"
authors = ["Verticaleap"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
clap = { version = "4", features = ["cargo", "env", "derive"] }
env_logger = "0.10"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hyper-tls = "0.5"
hyper = "0.14"
tower-http = { version = "0.1", features = ["trace", "auth"] }
tower = { version = "0.4", features = ["filter"] }
reqwest = { version = "0.11", features = ["json"] }
native-tls = "0.2"
base64 = "0.13"
url = { version = "2", features = ["serde"] }
metrics = "0.18"
metrics-exporter-prometheus = "0.9"
axum-extra = "0.1"
metrics-util = "0.12"
bytes = "0.5"
mongodb = "2"
futures = { version = "0.3.4", default-features = false, features = ["async-await"] }
futures-util = "0.3"
bson = "2"
rust_tools = { git = "https://github.com/findelabs/rust-tools.git", branch = "master" }
axum-macros = "0.3"
